@@ -24,5 +24,7 @@ Imports:
 Suggests:
     spdep
 License: GPL (>= 2)
+URL: https://github.com/gpiras/spldv
+BugReports: https://github.com/gpiras/spldv/issues
 LazyData: no
    
